--- a/package.json
+++ b/package.json
@@ -2,7 +2,19 @@
 	"name": "minetest-tools",
 	"displayName": "Minetest Tools",
 	"description": "",
+	"icon": "icon.png",
 	"version": "1.0.0",
+	"author": {
+		"name": "GreenXenith"
+	},
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/GreenXenith/minetest-tools.git"
+	},
+	"bugs": {
+		"url": "https://github.com/GreenXenith/minetest-tools/issues"
+	},
 	"engines": {
 		"vscode": "^1.41.0"
 	},
