--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "minetest-tools",
 	"displayName": "Minetest Tools",
-	"description": "",
+	"description": "Useful tools for Minetest developers.",
 	"icon": "icon.png",
 	"version": "1.0.1",
 	"author": {
