Update snippet generator script and handlers, bump snippet version to 5.4.1

--- a/package.json
+++ b/package.json
@@ -57,6 +57,12 @@
 				}
 			}
 		],
+        "snippets": [
+            {
+                "language": "lua",
+                "path": "./snippets.json"
+            }
+        ],
 		"grammars": [
 			{
 				"scopeName": "source.formspec",
