--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Minetest Tools",
 	"description": "Useful tools for Minetest developers.",
 	"icon": "icon.png",
-	"version": "1.3.1",
+	"version": "1.4.0",
 	"author": {
 		"name": "GreenXenith"
 	},
@@ -57,17 +57,19 @@
 				}
 			}
 		],
-        "snippets": [
-            {
-                "language": "lua",
-                "path": "./snippets.json"
-            }
-        ],
+		"snippets": [
+			{
+				"language": "lua",
+				"path": "./snippets.json"
+			}
+		],
 		"grammars": [
 			{
 				"scopeName": "source.formspec",
 				"path": "formspec.json",
-				"injectTo": ["source.lua"]
+				"injectTo": [
+					"source.lua"
+				]
 			}
 		]
 	},
