Mark `vscode.git` builtin extention as dependency

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "activationEvents": [
         "*"
     ],
+    "extensionDependencies": [
+        "vscode.git"
+    ],
     "main": "./out/extension.js",
     "contributes": {
         "commands": [
