Add config JSON Schema, move schemas at the same place
Some properties defined in the config schema aren't used yet

--- a/package.json
+++ b/package.json
@@ -94,11 +94,11 @@
             },
             {
                 "fileMatch": ".cdb.json",
-                "url": "./cdb_schema.json"
+                "url": "./src/json/cdb-schema.json"
             },
             {
                 "fileMatch": ".minetest-tools.json",
-                "url": "./src/config-schema.json"
+                "url": "./src/json/config-schema.json"
             }
         ]
     },
