--- a/package.json
+++ b/package.json
@@ -27,8 +27,19 @@
     ],
     "main": "./extension.js",
     "scripts": {
+        "build//": "echo Generates the snippets",
+        "build": "node snippets.js",
+        "build:dev": "build && npm run format:smartsnippets",
+        "format//": "echo Checks formatting of the repo, exiting with error if not formatted",
         "format": "prettier . --check",
-        "format:fix": "prettier . --write"
+        "format:fix//": "echo Fixes all formatting in the repo",
+        "format:fix": "prettier . --write",
+        "format:smartsnippets//": "echo Formats smartsnippets.json for debugging",
+        "format:smartsnippets": "prettier smartsnippets.json --write",
+        "prepackage": "npm run build",
+        "package//": "echo Packages the extension for installation. todo don't use star activation",
+        "package": "vsce package --allow-star-activation",
+        "postpackage": "npm run format:smartsnippets"
     },
     "prettier": {
         "tabWidth": 4
@@ -95,11 +106,11 @@
         "@types/mocha": "^5.2.7",
         "@types/node": "^12.11.7",
         "@types/vscode": "^1.41.0",
+        "@vscode/vsce": "^3.2.1",
         "eslint": "^6.6.0",
         "glob": "^7.1.5",
         "mocha": "^10.2.0",
         "prettier": "3.3.3",
-        "typescript": "^3.6.4",
-        "vscode-test": "^1.2.2"
+        "typescript": "^3.6.4"
     }
 }
